[MODORDERS-1343] Filter out used holdings when deleting